# EldenRingQuestLog

./: CMakeLists.txt  LICENSE.txt  README.md  buildme RELEASE.bat  buildme.bat  erquestlog.ini
questlog_lang/: brazilian.lang  english.lang  french.lang  german.lang  italian.lang  latam.lang  russian.lang  schinese.lang  spanish.lang  turkish.lang  vietnamese.lang
src/: dllmain.cpp  erquestlog_config.cpp  erquestlog_config.hpp  erquestlog_evaluators.cpp  erquestlog_messages.cpp  erquestlog_messages.hpp  erquestlog_messages_by_lang.cpp  erquestlog_quests.hpp  erquestlog_shops.cpp  erquestlog_shops.hpp  erquestlog_talkscript.cpp  erquestlog_talkscript.hpp  erquestlog_talkscript_utils.hpp  gamestrings.cpp  modutils.cpp  modutils.hpp
src/from/: ezstate.hpp  params.cpp  params.hpp  talk_commands.hpp
src/from/paramdef/: ACTIONBUTTON_PARAM_ST.hpp  AI_ANIM_TBL_PARAM.hpp  AI_ATTACK_PARAM_ST.hpp  AI_ODDS_PARAM.hpp  AI_SOUND_PARAM_ST.hpp  AI_STANDARD_INFO_BANK.hpp  ASSET_GEOMETORY_PARAM_ST.hpp  ASSET_MATERIAL_SFX_PARAM_ST.hpp  ASSET_MODEL_SFX_PARAM_ST.hpp  ATK_PARAM_ST.hpp  ATTACK_ELEMENT_CORRECT_PARAM_ST.hpp  AUTO_CREATE_ENV_SOUND_PARAM_ST.hpp  BASECHR_SELECT_MENU_PARAM_ST.hpp  BEHAVIOR_PARAM_ST.hpp  BONFIRE_WARP_PARAM_ST.hpp  BONFIRE_WARP_SUB_CATEGORY_PARAM_ST.hpp  BONFIRE_WARP_TAB_PARAM_ST.hpp  BUDDY_PARAM_ST.hpp  BUDDY_STONE_PARAM_ST.hpp  BUDGET_PARAM_ST.hpp  BULLET_CREATE_LIMIT_PARAM_ST.hpp  BULLET_PARAM_ST.hpp  CACL_CORRECT_GRAPH_ST.hpp  CAMERA_FADE_PARAM_ST.hpp  CEREMONY_PARAM_ST.hpp  CHARACTER_INIT_PARAM.hpp  CHARMAKEMENUTOP_PARAM_ST.hpp  CHARMAKEMENU_LISTITEM_PARAM_ST.hpp  CHR_ACTIVATE_CONDITION_PARAM_ST.hpp  CHR_MODEL_PARAM_ST.hpp  CLEAR_COUNT_CORRECT_PARAM_ST.hpp  COMMON_SYSTEM_PARAM_ST.hpp  COOL_TIME_PARAM_ST.hpp  CS_AA_QUALITY_DETAIL.hpp  CS_DECAL_QUALITY_DETAIL.hpp  CS_DOF_QUALITY_DETAIL.hpp  CS_EFFECT_QUALITY_DETAIL.hpp  CS_GRAPHICS_CONFIG_PARAM_ST.hpp  CS_KEY_ASSIGN_MENUITEM_PARAM.hpp  CS_LIGHTING_QUALITY_DETAIL.hpp  (+146 more)
